--- a/android/project.properties
+++ b/android/project.properties
@@ -3,7 +3,7 @@
 
 # To enable ProGuard to work with Eclipse ADT, uncomment this (available properties: sdk.dir, user.home)
 # and ensure proguard.jar in the Android SDK is up to date (or alternately reduce the android target to 23 or lower):
-# proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-rules.pro
+# proguard.com.obstacle.alex.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-rules.pro
 
 # Project target.
 target=android-19
